--- a/sign-up/style.css
+++ b/sign-up/style.css
@@ -1,3 +1,6 @@
+/* google font */
+@import url('https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&display=swap');
+
 /* color variable */
 
 :root {
@@ -8,3 +11,168 @@
 }
 
 /* color variable */
+
+/* default css */
+
+* {
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  box-sizing: border-box;
+  font-family: 'Geist Mono', monospace;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: var(--primary-color);
+}
+
+button {
+  cursor: pointer;
+  background-color: transparent;
+  color: var(--quaternary);
+  border: none;
+}
+
+/* default css */
+
+/* reusable css */
+
+.heading-1 {
+  font-size: 49px;
+  font-weight: bold;
+}
+
+.heading-2 {
+  font-size: 39px;
+  font-weight: bold;
+}
+
+.heading-3 {
+  font-size: 32px;
+  font-weight: bold;
+}
+
+.heading-4 {
+  font-size: 25px;
+  font-weight: bold;
+  line-height: 36px;
+}
+
+.heading-5 {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.heading-6 {
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 23px;
+}
+
+.paragraph {
+  font-size: 16px;
+  font-weight: normal;
+  line-height: 30px;
+}
+
+/* reusable css */
+
+/* Personal Detail Section Style */
+/* Sign-up heading */
+.heading-section {
+  margin: 80px 0;
+}
+
+.signup-heading__sub-title {
+  font-size: 12px;
+  color: var(--sonic-silver);
+  max-width: 644px;
+}
+
+.signup-heading__details {
+  padding: 60px 0;
+  font-size: 14px;
+  line-height: 30px;
+  color: var(--sonic-silver);
+}
+
+.signup-heading-border {
+  border-bottom: 2px solid var(--white-smoke);
+}
+
+/*  Personal Details Section Style */
+.details-heading__title {
+  padding-bottom: 42px;
+}
+
+.details-heading {
+  display: flex;
+  column-gap: 250px;
+  padding-bottom: 29px;
+}
+
+.details__email-id {
+  color: var(--sonic-silver);
+}
+
+.signup-details-border {
+  border-bottom: 2px solid var(--white-smoke);
+  width: 350px;
+  margin-bottom: 29px;
+}
+
+/* Customer Section */
+.signup-heading__title--modi {
+  padding: 50px 0 32px;
+}
+
+.customer-heading__details {
+  font-size: 14px;
+  line-height: 30px;
+  color: var(--sonic-silver);
+  padding-top: 38px;
+  padding-bottom: 50px;
+}
+
+.customer-select {
+  display: flex;
+  justify-content: space-between;
+}
+
+/* Login Section Style */
+.login-section {
+  margin-top: 30px;
+}
+
+.login-btn {
+  width: 220px;
+  height: 50px;
+  border: 2px solid var(--dark-gray);
+  border-radius: 5px;
+  line-height: 50px;
+  text-align: center;
+  cursor: pointer;
+  margin: 40px 0 140px;
+
+  &:hover {
+    background-color: var(--sonic-silver);
+    color: white;
+
+  }
+}
+
+.login-btn a {
+  text-decoration: none;
+  color: var(--black-color);
+}
+
+.login-btn:hover a {
+  text-decoration: none;
+  background-color: var(--sonic-silver);
+  color: white;
+}
