--- a/404/style.css
+++ b/404/style.css
@@ -12,3 +12,61 @@
   padding-top:81px;
   padding-bottom:140px;
 }
+.errorpage__content__h1{
+  font-size:200px;
+  font-weight:700;
+  line-height:100%;
+  color:var(--black-color);
+  font-family:"DM san"
+
+}
+.errorpage__content__p{
+   font-size:16px;
+  font-weight:400;
+  line-height:23px;
+  color:var(--sonic-silver);
+  font-family:"DM san";
+}
+.errorpage__content__search{
+  position: relative;
+  display: inline-block;
+}
+.errorpage__content__input{
+  padding: 10px 40px 10px 16px;
+   font-size:16px;
+  font-weight:500;
+  color:var(--sonic-silver);
+  font-family:"DM san";
+  width:100%;
+  margin-top:30px;
+  margin-bottom:60px;
+  border:1px solid #F0F0F0;
+  border-radius: 6px;
+} 
+
+ .insidetoinput{
+  position: absolute;
+  right: 20px;
+  top: 40%;
+  transform: translateY(-40%);
+  color: #555;
+  pointer-events: none;
+  font-size: 16px;
+  color:var(--black-color);
+  transition:.61s all ease;
+} 
+
+.errorpage__content__input:focus + .insidetoinput{
+  opacity:0;
+}
+.errorpage__content__btn{
+  background:var(--black-color);
+  color:var(--white-smoke);
+  padding:16px 50px;
+  transition:.2s all;
+}
+.errorpage__content__btn:hover{
+  cursor: pointer;
+  background:var(--white-smoke);
+  color:var(--black-color)
+}
